--- a/notebooks/augmenter.ipynb
+++ b/notebooks/augmenter.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "67e79d6b",
       "metadata": {},
       "outputs": [],
@@ -231,7 +231,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "nlp",
+      "display_name": "cloudspace",
       "language": "python",
       "name": "python3"
     },
@@ -245,7 +245,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.9"
+      "version": "3.12.11"
     }
   },
   "nbformat": 4,
