--- a/notebooks/augmenter.ipynb
+++ b/notebooks/augmenter.ipynb
@@ -2,11 +2,25 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "67e79d6b",
       "metadata": {},
       "outputs": [],
       "source": [
+        "import sys\n",
+        "from pathlib import Path\n",
+        "import os\n",
+        "\n",
+        "# Add parent directory to path to import logs module\n",
+        "# This allows importing from the root directory when running from notebooks/\n",
+        "current_dir = Path(os.getcwd())\n",
+        "if current_dir.name == 'notebooks':\n",
+        "    # If we're in notebooks/, add parent directory\n",
+        "    sys.path.insert(0, str(current_dir.parent))\n",
+        "else:\n",
+        "    # If running from root, add current directory\n",
+        "    sys.path.insert(0, str(current_dir))\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -20,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "7bdb9c66",
       "metadata": {},
       "outputs": [],
@@ -34,7 +48,7 @@
         "NUM_TYPES = 5\n",
         "NUM_MANIFESTATIONS = 6\n",
         "datasets_merge = True\n",
-        "lang = \"arb\"\n",
+        "lang = \"eng\"\n",
         "# trial_id = \"0000NG3\"\n",
         "# model_names = ['bert-base-uncased', \"UBC-NLP/MARBERTv2\", \"microsoft/deberta-v3-base\", \"FacebookAI/xlm-roberta-large\", \"0ssamaak0/roberta-base-LEGO_emotions\", \"FacebookAI/roberta-base\"]\n",
         "# model_name = model_names[-1]"
@@ -42,20 +56,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "id": "a6e2fe95",
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_1 = pd.read_csv(\"./dev_phase/subtask1/train/\" + lang + \".csv\")\n",
-        "train_2 = pd.read_csv(\"./dev_phase/subtask2/train/\" + lang + \".csv\")\n",
-        "train_3 = pd.read_csv(\"./dev_phase/subtask3/train/\" + lang + \".csv\")\n",
-        "dev_df = pd.read_csv(\"./dev_phase/subtask1/dev/\" + lang + \".csv\")"
+        "train_1 = pd.read_csv(\"../dev_phase/subtask1/train/\" + lang + \".csv\")\n",
+        "train_2 = pd.read_csv(\"../dev_phase/subtask2/train/\" + lang + \".csv\")\n",
+        "train_3 = pd.read_csv(\"../dev_phase/subtask3/train/\" + lang + \".csv\")\n",
+        "dev_df = pd.read_csv(\"../dev_phase/subtask1/dev/\" + lang + \".csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "id": "a67443db",
       "metadata": {},
       "outputs": [
@@ -76,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 5,
       "id": "7358f074",
       "metadata": {},
       "outputs": [],
@@ -86,14 +100,14 @@
         "\n",
         "client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
         "\n",
-        "def paraphrase_text(text: str, model: str = \"gpt-5.1-2025-11-13\") -> str:\n",
+        "def paraphrase_text(text: str, model: str = \"gpt-5.2-2025-12-11\") -> str:\n",
         "    \"\"\"Paraphrase text using OpenAI API while preserving meaning and tone.\"\"\"\n",
         "    response = client.chat.completions.create(\n",
         "        model=model,\n",
         "        messages=[\n",
         "            {\n",
         "                \"role\": \"system\",\n",
-        "                \"content\": \"You are a paraphrasing assistant. Rephrase the given text while preserving its exact meaning, tone, and sentiment. Keep the same level of formality and emotional intensity. Output ONLY the paraphrased text, nothing else.\"\n",
+        "                \"content\": \"You are a paraphrasing assistant. Rephrase the given text while preserving its exact meaning, tone, and sentiment. You can change the wording tone, formality, if it's in standard Arabic you can use dialect or vice versa. The goal is to augment this data to make the model more robust on polarization and hate speech detection. Do everything but keep the same meaning. Output ONLY the paraphrased text, nothing else.\"\n",
         "            },\n",
         "            {\n",
         "                \"role\": \"user\", \n",
@@ -106,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "id": "b723d466",
       "metadata": {},
       "outputs": [
@@ -114,32 +128,32 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Samples to augment: 507\n"
+            "Samples to augment: 845\n"
           ]
         }
       ],
       "source": [
         "# Sample 15% of the dataset for augmentation\n",
-        "AUGMENT_RATIO = 0.15\n",
+        "AUGMENT_RATIO = 0.25\n",
         "sample_df = train_df.sample(frac=AUGMENT_RATIO, random_state=42)\n",
         "print(f\"Samples to augment: {len(sample_df)}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "id": "4e5f5510",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "56a7a3807a444c25b3888c5a67a83968",
+              "model_id": "89659231af6342da9174235e96822aa4",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "Paraphrasing:   0%|          | 0/507 [00:00<?, ?it/s]"
+              "Paraphrasing:   0%|          | 0/845 [00:00<?, ?it/s]"
             ]
           },
           "metadata": {},
@@ -149,7 +163,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Successfully augmented: 507 examples\n"
+            "Successfully augmented: 845 examples\n"
           ]
         }
       ],
@@ -174,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 9,
       "id": "b822907f",
       "metadata": {},
       "outputs": [
@@ -182,7 +196,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Final dataset size: 3887 (original: 3380, augmented: 507)\n",
+            "Final dataset size: 4225 (original: 3380, augmented: 845)\n",
             "Saved augmented dataset!\n"
           ]
         }
@@ -193,7 +207,7 @@
         "print(f\"Final dataset size: {len(final_df)} (original: {len(train_df)}, augmented: {len(augmented_df)})\")\n",
         "\n",
         "# Save the augmented dataset\n",
-        "final_df.to_csv(f\"./dev_phase/subtask1/train/{lang}_augmented.csv\", index=False)\n",
+        "final_df.to_csv(f\"../dev_phase/subtask1/train/{lang}_augmented_1.csv\", index=False)\n",
         "print(\"Saved augmented dataset!\")\n",
         "\n",
         "# # or load if already saved\n",
@@ -202,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 11,
       "id": "9fd02733",
       "metadata": {},
       "outputs": [
@@ -221,9 +235,9 @@
         "train_3_aug = final_df[train_3.columns].copy()\n",
         "\n",
         "# Save per-subtask augmented datasets\n",
-        "train_1_aug.to_csv(f\"./dev_phase/subtask1/train/{lang}_augmented.csv\", index=False)\n",
-        "train_2_aug.to_csv(f\"./dev_phase/subtask2/train/{lang}_augmented.csv\", index=False)\n",
-        "train_3_aug.to_csv(f\"./dev_phase/subtask3/train/{lang}_augmented.csv\", index=False)\n",
+        "train_1_aug.to_csv(f\"../dev_phase/subtask1/train/{lang}_augmented1.csv\", index=False)\n",
+        "train_2_aug.to_csv(f\"../dev_phase/subtask2/train/{lang}_augmented1.csv\", index=False)\n",
+        "train_3_aug.to_csv(f\"../dev_phase/subtask3/train/{lang}_augmented1.csv\", index=False)\n",
         "\n",
         "print(\"Saved split augmented datasets for subtask1/2/3.\")"
       ]
@@ -231,7 +245,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "cloudspace",
+      "display_name": "nlp",
       "language": "python",
       "name": "python3"
     },
@@ -245,7 +259,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.13.9"
     }
   },
   "nbformat": 4,
